# GenBase

./: GenBase.cabal  README.md
docs/: base.md
src/: Base.hs  Recur.hs
src/Math/Base/: Base.hs  Recur.hs
src/Math/GenBase/: Base.hs  Recur.hs
