cabal-version:       >=1.10
name:                GenBase
version:             0.1.0.2
synopsis:            Positional notation manipulations
description:         Functionality for converting to/from various positional notations
-- bug-reports:
license:             BSD3
license-file:        LICENSE
author:              Cube
maintainer:          cubebert549@gmail.com
category:            Math
build-type:          Simple
extra-source-files:  CHANGELOG.md, README.md


library
  exposed-modules:     Math.GenBase.Recur, Math.GenBase.Base
  -- other-modules:
  other-extensions:    FlexibleInstances
  build-depends:       base >=4.14 && <4.15
  hs-source-dirs:      src
  default-language:    Haskell2010


-- test-suite GenBase-test
  -- Base language which the package is written in.
  -- default-language:    Haskell2010

  -- The interface type and version of the test suite.
  -- type:                exitcode-stdio-1.0

  -- The directory where the test specifications are found.
  -- hs-source-dirs:      test

  -- The entrypoint to the test suite.
  -- main-is:             MyLibTest.hs

  -- Test dependencies.
  -- build-depends:       base >=4.14 && <4.15

