cabal-version:       >=1.10
name:                GenBase
version:             0.1.0.3
synopsis:            Positional notation manipulations
description:         Functionality for converting to/from various positional notations
-- bug-reports:
license:             BSD3
license-file:        LICENSE
author:              Cube
maintainer:          cubebert549@gmail.com
category:            Math
build-type:          Simple
extra-source-files:  CHANGELOG.md, README.md


library
  exposed-modules:     Math.Base.Recur, Math.Base.Base
  -- other-modules:
  other-extensions:    FlexibleInstances
  build-depends:       base >=4.14 && <4.15
  hs-source-dirs:      src
  default-language:    Haskell2010
